app-test/testdata/typesystem/pos/pattern-matching-analysis-unreachability-tuple/src/patmat.cal
namespace patmat:
    actor UnreachabilityTuple() ==> int OUT:
        (int, bool) t;
        do
            OUT <--
            case t of
                _ : 0 end
                (_, false) : 1 end
            end;
        end
    end
end