app-test/testdata/typesystem/neg/pattern-matching-analysis-exhaustivity-tuple/src/patmat.cal
namespace patmat:
    actor ExhaustivityTuple() ==> int OUT:
        (int, bool) t;
        do
            OUT <--
            case t of
                (_, false) : 1 end
            end;
        end
    end
end